Convert junit4 to junit5 - services module
Issue-ID: POLICY-5041
Change-Id: I50f1ce21dbef1398cd91dd55196baa61bd06a63c
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>